# concepttordf

./: .flake8  .gitignore  AGENTS.md  CLAUDE.md  Pipfile  README.md  TODO.md  mypy.ini  noxfile.py  pyproject.toml  setup.py
.github/workflows/: constraints.txt  coverage.yml  release-drafter.yml  release.yml  tests.yml
concepttordf/: __init__.py  alternativformulering.py  associativerelation.py  betydningsbeskrivelse.py  collection.py  concept.py  conceptrelation.py  contact.py  definition.py  genericrelation.py  partitiverelation.py
docs/: alternativformulering.html  associativerelation.html  betydningsbeskrivelse.html  collection.html  concept.html  conceptrelation.html  conf.py  contact.html  definition.html  genericrelation.html  index.html  index.rst  partitiverelation.html  reference.rst  requirements.txt
examples/: collection.py  concept.py
src/concepttordf/: __init__.py  alternativformulering.py  associativerelation.py  betydningsbeskrivelse.py  collection.py  concept.py  conceptrelation.py  contact.py  definition.py  genericrelation.py  partitiverelation.py
tests/: collection.json  collection.ttl  collection_excluding_concepts.ttl  completeconcept.json  completeconcept.ttl  concept.json  concept.ttl  contact.json  contact.ttl  definition.json  definition.ttl  test_alternativformulering.py  test_collection.py  test_concept.py  test_contact.py  test_definition.py
tests/files/: collection.ttl  collection_excluding_concepts.ttl  completeconcept.json  completeconcept.ttl  concept.json  concept.ttl  contact.json  contact.ttl  definition.json  minimal_concept.json  minimal_concept.ttl
