[tool.poetry]
authors = ["Stig B. Dørmænen <stigbd@gmail.com>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
description = "A library for mapping a concept collection to rdf"
documentation = "https://concepttordf.readthedocs.io"
homepage = "https://github.com/Informasjonsforvaltning/concepttordf"
license = "Apache-2.0"
name = "concepttordf"
readme = "README.md"
repository = "https://github.com/Informasjonsforvaltning/concepttordf"
version = "2.0.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
rdflib = "^6.0.0"

[tool.poetry.dev-dependencies]
Pygments = "^2.6.1"
black = "^22.3.0"
codecov = "^2.0.16"
coverage = {extras = ["toml"], version = "^6.3.2"}
darglint = "^1.2.0"
flake8 = "^4.0.1"
flake8-annotations = "^2.0.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.3.23"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"
mypy = "^0.942"
nox = "^2022.1.7"
nox-poetry = "^0.9.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytype = "^2022.4.6"
safety = "^1.8.7"
sphinx = "^4.0.0"
sphinx-autodoc-typehints = "^1.12.0"
xdoctest = {extras = ["all"], version = "^1.0.0"}

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["concepttordf"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = false
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = []

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
