[tool.poetry]
authors = ["Stig B. Dørmænen <stigbd@gmail.com>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
description = "A library for mapping a concept collection to rdf"
documentation = "https://concepttordf.readthedocs.io"
homepage = "https://github.com/Informasjonsforvaltning/concepttordf"
license = "Apache-2.0"
name = "concepttordf"
readme = "README.md"
repository = "https://github.com/Informasjonsforvaltning/concepttordf"
version = "3.0.1"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
rdflib = "^7.2.1"
setuptools = "^80.0.0"

[tool.poetry.group.dev.dependencies]
Pygments = "^2.17.0"
Sphinx = "^8.0.0"
black = "^25.0.0"
codecov = "^2.1.13"
coverage = {extras = ["toml"], version = "^7.4.4"}
darglint = "^1.8.1"
flake8 = "^7.1.1"
flake8-annotations = "^3.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.4.0"
flake8-bugbear = "^24.2.6"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.19.0"
mypy = "^1.11.0"
nox = "^2025.0.0"
nox-poetry = "^1.0.1"
pytest = "^8.3.0"
pytest-cov = "^7.0.0"
pytype = "^2024.1.0"
safety = "^3.0.0"
marshmallow = "^3.20.0"
sphinx-autodoc-typehints = "^3.0.0"
xdoctest = "^1.0.2"
pip-audit = "^2.10.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["concepttordf"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = false
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = []

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
